# my_agent

./: .Dockerfile_base  .dockerignore  .gitignore  Dockerfile  Dockerfile_base  README.md  code_review.md  design.md  environment.yaml  loop.py  pyproject.toml  replacements.txt  requirements.txt  script_storyboard_output.json  script_tags_output.json  test_create_index.py
agent/: main_agent.py  sub_agent.py
core/: state.py
data/: .gitkeep  test_workspace_file.txt
data/graphs/: web_architecture.json
docs/: GITHUB_PUSH_PROTECTION_FIX.md
playground/: llm_tools.py
prompts/system_prompt/: neuro_role.py
src/: .env_example  FastAPI_server.py  __init__.py  run_agent.py
src/config/: config.example.yml  config.py  config.yml
src/core/: __init__.py
src/exceptions/: __init__.py  agent.py  base.py  infra.py  tool.py
src/infra/: __init__.py  component_loader.py  connector_loader.py
src/models/: __init__.py
src/prompt_templates/: 不加字优化2.0.md  不加字优化简化版.md  不加字优化详细版2.0.md  不加字详细版约束.md  严格版不加字优化.md  提示词1.md  视频大师.md  视频默认提示词.md  默认模板.md
src/routers/: __init__.py  agent.py  chat.py  image.py  memory.py  prompt_template.py  script_match.py  stack.py  task.py  video.py  video_analysis.py
src/services/: __init__.py  agent_service.py  analysis_video.py  chat_service.py  image_history_db_service.py  media_mirror_service.py  memory_service.py  prompt_template_db_service.py  stream_service.py  (+5 more)
test/: check_video_info.py  download_script.py  test_opensearch_pydantic.py  test_opensearch_retriever.py
tests/: __init__.py
tools/: registry.py
utils/: llm_tools.py
(+985 files in other folders)
